--- a/fp2018/index.asciidoc
+++ b/fp2018/index.asciidoc
@@ -117,6 +117,33 @@ link:04.pdf[слайды]
 
 // link:exercises6.html[Упражнения про исчисление высказываний и немного про списки]
 
+
+[[questions]]
+Вопросы к экзамену
+------------------
+. ☦ Алгебра типов. Простейшие типы из которые можно много чего построить.
+. Эквивалентность, равенство и изоморфизм. И для типов тоже.
+. Как из простейших типов построить что-то изоморфное данному алгебраическому типу?
+. ☦ Лямда-исчисление. Три правила перобразования лямбда-термов.
+. Стратегии вычисления лямбда-термов: call-by-name, call-by-value, call-by-need.
+  Почему одно лучше/хуже другого?
+. ☦ Унификация и подстановки. ☦ Capture avoiding substitution. Индексы де Брауна.
+. ☦ Функторы. ☦ Законы функторов.
+. ☦ Аппликативные функторы. Законы
+. ☦ Монады. ☦ Законы монад. ☦ Выражение функторов и аппликативов, если монада описана.
+  ☦ Стандартные монады: Reader, Writer, ☦ State, ☦ List, ☦ Maybe, Cont, ☦ IO.
+. ☦ Do-нотация. ☦ Преобразование монадического кода из do-нотации и обратно.
+. Преобразования кода с list comprehension в do-нотацию и обратно.
+. Классы типов. Мотивация.
+. Free monad. Пример.
+. Фантомные типы. Пример.
+. Экзистенциальные типы. Почему такое название?
+. Type families. Мотивация.
+. ☦ Катаморфизм и анаморфизм. Пример. 
+. Параморфизм. Хиломорфизм.
+
+За мямленье в ответ на вопрос с ☦ будет больно.
+
 ifdef::backend-docbook[]
 [index]
 Example Index
