--- a/fp2018/index.asciidoc
+++ b/fp2018/index.asciidoc
@@ -134,6 +134,8 @@ link:04.pdf[слайды]
   ☦ Стандартные монады: Reader, Writer, ☦ State, ☦ List, ☦ Maybe, Cont, ☦ IO.
 . ☦ Do-нотация. ☦ Преобразование монадического кода из do-нотации и обратно.
 . Преобразования кода с list comprehension в do-нотацию и обратно.
+. Стандартные функции над списками. Будьте готовы написать двухстрочную функцию (map, drop, etc.)
+не отходя от кассы (или типа того).
 . Классы типов. Мотивация.
 . Free monad. Пример.
 . Фантомные типы. Пример.
