--- a/fp2019/index.asciidoc
+++ b/fp2019/index.asciidoc
@@ -80,28 +80,32 @@ https://ruhaskell.org/links.html
 
 http://ideas.cs.uu.nl/HEE/index.html[Трассировка вычисления] функций в Haskell.
 
-Курсы на степике "какие есть": https://stepik.org/course/75/ и https://stepik.org/course/693/ от Д.Москвина
 
-А к январю
-----------
+А к экзамену
+------------
 
-Стоило бы https://stepik.org/join-class/c1c9e25ba893da83ade391c83755dac408b4d90c[сдать]
-второй курс Москвина на Степике, чтобы получить "допуск на вход" на экзамен.
+Стоило бы сдать допуск на вход:
 
+* Cдать https://stepik.org/join-class/3a7513c770b80866b96e18baa03c3ce18e87303e[1ю часть курса] про ФП на степике
+* Cдать https://stepik.org/join-class/a4741bd985027507643baf2b07221c264329b484[2ю часть курса] про ФП на степике
+* Колобок про теоркат (но это пока не точно).
+* Домашки в количестве примерно 5 штук
+  ** Планируется разрешить писать на Haskell, OCaml/ReasonML или Scala 3 (sic!)
+  ** Планируется примерно 5 домашек
 
 [[week1]]
-Неделя 1 (? сентября)
-----------------------
+Неделя 1 (5 сентября)
+---------------------
 
-link:01introduction.pdf[слайды]
+link:00intro.pdf[слайды]
 
-Про типы
+Вводная про языки программирования
 
 [[week2]]
-Неделя 2 (13 сентября)
+Неделя 2 (12 сентября)
 ----------------------
 
-link:02typedesign.pdf[слайды]
+// link:02typedesign.pdf[слайды]
 
 Про дизайн собственных типов данных
 
@@ -109,8 +113,8 @@ link:02typedesign.pdf[слайды]
 
 
 [[questions]]
-Вопросы к экзамену 2018/2019 года
----------------------------------
+Теоретические вопросы к экзамену 2018 (предыдущего) года
+--------------------------------------------------------
 За мямленье в ответ на вопрос с ☦ будет больно.
 
 . Абстрактный спискок и сложность основных операций у него. Какие (минимум две) реализации абстрактных списков Вы знаете и что там со ложностью основных опeраций?
@@ -127,8 +131,7 @@ link:02typedesign.pdf[слайды]
   ☦ Стандартные монады: Reader, Writer, ☦ State, ☦ List, ☦ Maybe, Cont, ☦ IO.
 . ☦ Do-нотация. ☦ Преобразование монадического кода из do-нотации и обратно.
 . Преобразования кода с list comprehension в do-нотацию и обратно.
-. Стандартные функции над списками. Будьте готовы написать двухстрочную функцию (map, drop, etc.)
-не отходя от кассы (или типа того).
+. Стандартные функции над списками. Будьте готовы написать двухстрочную функцию (map, drop, etc.) не отходя от кассы (или типа того).
 . Классы типов. Мотивация.
 . Free monad. Пример.
 . Фантомные типы. Пример.
