--- a/fp2019/index.asciidoc
+++ b/fp2019/index.asciidoc
@@ -80,6 +80,14 @@ https://ruhaskell.org/links.html
 
 http://ideas.cs.uu.nl/HEE/index.html[Трассировка вычисления] функций в Haskell.
 
+Проекты/(полу)курсовые
+----------------------
+
+link:projects.html[Тут] есть список проектов которые можно попытаться сделать как курсовую (или миникурсовую в четвертом семетре). Как задача на 5 автоматом они выглядят чересчур сложными.
+
+А ещё вы можете попробовать найти что-нибудь интересное у других людей из нашей лаборатории по понедельникам.
+
+
 
 А к экзамену
 ------------
@@ -88,6 +96,7 @@ http://ideas.cs.uu.nl/HEE/index.html[Трассировка вычисления
 
 * Cдать https://stepik.org/join-class/3a7513c770b80866b96e18baa03c3ce18e87303e[1ю часть курса] про ФП на степике
 * Cдать https://stepik.org/join-class/a4741bd985027507643baf2b07221c264329b484[2ю часть курса] про ФП на степике
+* TODO: разобраться что там с курсами по Scala.
 * Колобок про теоркат (но это пока не точно).
 * Домашки в количестве примерно 5 штук
   ** Планируется разрешить писать на Haskell, OCaml/ReasonML или Scala 3 (sic!)
