--- a/fp2019/index.asciidoc
+++ b/fp2019/index.asciidoc
@@ -114,9 +114,16 @@ link:00intro.pdf[слайды]
 Неделя 2 (12 сентября)
 ----------------------
 
-// link:02typedesign.pdf[слайды]
+ link:01typedesign.pdf[слайды]
 
 Про дизайн собственных типов данных
+
+[[week3]]
+Неделя 3 (19 сентября)
+----------------------
+
+//link:01typedesign.pdf[слайды]
+
 
 
 
